# MXT223-web

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RELEASE.md  app.py  deploy-vps.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  schedule.db
.Jules/: palette.md
.github/workflows/: tests.yml
app/: __init__.py  config.py  database.py  dependencies.py  idempotency.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  rate_limit.py  sanitize.py  scheduler.py  schemas.py
app/routers/: __init__.py  admin.py  api.py  auth.py  extras.py  pages.py  push.py  ratings.py  schedule.py
migrations/: 001_avatar_column.sql  README.md
scripts/: add_indexes.py  gen_keys.py  generate_vapid_keys.py  migrate_passwords.py  split_avatars.py
tests/: conftest.py  test_auth.py  test_health.py  test_schedule.py
tests/e2e/: conftest.py  test_frontend.py  test_schedule_flow.py
utils/: auth.py  cache.py  jwt.py
web/: 404.html  academics.html  admin.html  exams.html  index.html  login.html  manifest.json  next.html  offline.html  preview-future.html  profile.html  promote-me.html  ratings.html  subjects.html  sw.js  widget.html
web/static/: academics.css  academics.js  admin.css  admin.js  api.js  app.js  calendar_export.js  exams.css  exams.js  future-preview.css  install.css  install.js  login.css  login.js  menu.css  menu.js  metrics.js  profile.css  profile.js  ratings.css  ratings.js  schedule_data.js  search.css  search.js  styles.css  subjects.css  subjects.js  theme.js  toast.css  (+2 more)
(+3 files in other folders)
