[project]
name = "mxt223-web"
version = "1.0.0"
description = "Расписание и рейтинги для группы МХТ-223"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [".git", ".venv", "venv", "__pycache__", "MXT223-web", "ios"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
